Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/diamond/T8041713/DiamondPlusUnexistingMethodRefCrashTest.java
/*
 * @test /nodynamiccopyright/
 * @bug 8041713
 * @summary  Type inference of non-existent method references crashes the compiler
 * @compile/fail/ref=DiamondPlusUnexistingMethodRefCrashTest.out -XDrawDiagnostics DiamondPlusUnexistingMethodRefCrashTest.java
 */

public class DiamondPlusUnexistingMethodRefCrashTest<T> {
    DiamondPlusUnexistingMethodRefCrashTest<String> m =
        new DiamondPlusUnexistingMethodRefCrashTest<>(DiamondPlusUnexistingMethodRefCrashTest::doNotExists);
}
